--- a/buildspec.yml
+++ b/buildspec.yml
@@ -5,10 +5,9 @@ phases:
       python: 3.10
   build:
     commands:
-      - aws cloudformation package --template-file search-gateway.yaml --s3-bucket searchproject-codebuild --output-template-file gateway.yaml
+      - aws cloudformation package --template-file search-function.yaml --s3-bucket searchproject-codebuild --output-template-file gateway.yaml
 
 artifacts:
   type: zip
   files:
-    - search-gateway.yaml
-    - gateway.yaml
+    - search-function.yaml
