--- a/search-function.yaml
+++ b/search-function.yaml
@@ -5,10 +5,10 @@ Resources:
   searchgateway:
     Type: 'AWS::Serverless::Function'
     Properties:
-      Handler: sample.lambda_handler
-      Runtime: python3.9
-      CodeUri: .
+      Handler: lambda_function.lambda_handler
+      Runtime: python3.13
+      CodeUri: s3://mycodebucet/search-function.zip
       Description: ''
       MemorySize: 128
       Timeout: 300
-      Role: 'arn:aws:iam::844028273225:role/lambda_s3'
+      Role: 'arn:aws:iam::020510964414:role/service-role/PDFtoTXT-role-rkh5aptl'
